--- a/src/custom/plugins/KiyoTheme/src/Resources/views/storefront/layout/footer/footer.html.twig
+++ b/src/custom/plugins/KiyoTheme/src/Resources/views/storefront/layout/footer/footer.html.twig
@@ -241,17 +241,18 @@
 {#                            <img src="{{ asset('bundles/kiyotheme/assets/images/Bundesamt.png', 'asset') }}">#}
 {#                        </div>#}
                             <div class="col-8 col-md-2 logo">
-                                <img src="{{ asset('bundles/kiyotheme/assets/images/Klimapakt.png', 'asset') }}">
+                                <img src="{{ asset('bundles/kiyotheme/assets/images/klimapakt.svg', 'asset') }}">
                             </div>
 {#                        <div class="col-4 col-md-2 logo">#}
 {#                            <img src="{{ asset('bundles/kiyotheme/assets/images/Trusted.png', 'asset') }}">#}
 {#                        </div>#}
-
-                                                    
                             <div class="col-12 offset-md-4 col-md-6 logo-container">
-                                <img class="payment-logo" src="{{ asset('bundles/kiyotheme/assets/images/apple-pay.png', 'asset') }}">
-                                <img class="payment-logo" src="{{ asset('bundles/kiyotheme/assets/images/pay-pal.png', 'asset') }}">
+                                <img class="payment-logo" src="{{ asset('bundles/kiyotheme/assets/images/visa.png', 'asset') }}">
                                 <img class="payment-logo" src="{{ asset('bundles/kiyotheme/assets/images/mastercard.png', 'asset') }}">
+                                <img class="payment-logo" src="{{ asset('bundles/kiyotheme/assets/images/giropay.png', 'asset') }}">
+                                <img class="payment-logo" src="{{ asset('bundles/kiyotheme/assets/images/apple-pay.png', 'asset') }}">
+                                <img class="payment-logo" src="{{ asset('bundles/kiyotheme/assets/images/paypal.png', 'asset') }}">
+                                <img class="payment-logo" src="{{ asset('bundles/kiyotheme/assets/images/klarna.png', 'asset') }}">
                             </div>
                     </div>
                 </div>
