Add home link to logo

--- a/src/custom/plugins/KiyoTheme/src/Resources/app/storefront/src/scss/menu.scss
+++ b/src/custom/plugins/KiyoTheme/src/Resources/app/storefront/src/scss/menu.scss
@@ -6,6 +6,11 @@
   }
   .header-logo-main {
     padding-right: 20px;
+    a {
+      &:hover {
+        text-decoration: none;
+      }
+    }
   }
 }
 
